# Career-Pivot

./: .env.example  .gitignore  .vercelignore  README.md  docker-compose.yml  vercel.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: application.py  artifact.py  dashboard.py  job.py  outreach.py  profile.py
backend/app/services/: ai.py  applications.py  artifacts.py  auto_apply.py  browser_automation.py  discovery.py  job_fit.py  outreach.py  resume_parser.py  scoring.py  text.py
backend/app/services/connectors/: email.py  status.py
backend/app/services/job_sources/: base.py  company_pages.py  greenhouse.py  lever.py  playwright_boards.py  public_apis.py  sample.py
backend/app/workers/: scheduler.py
backend/tests/: test_auto_apply.py  test_resume_parser.py  test_scoring.py  test_sources.py
docs/: architecture.md  implementation-plan.md  schema.sql
examples/: workflows.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: ActionButton.tsx  JobBoard.tsx  JobDetail.tsx  ProfilePanel.tsx  SummaryBar.tsx
frontend/src/lib/: api.ts
frontend/src/types/: job.ts
playwright/.auth/: README.md
scripts/: discover.sh  import_resume.sh  run-dev.sh  setup.sh
