[project]
name = "career-pivot-backend"
version = "0.1.0"
description = "FastAPI backend for Career Pivot, an automated AI job-search agent."
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.12.3",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "openai>=1.99.0",
    "playwright>=1.46.0",
    "psycopg[binary]>=3.2.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "pypdf>=4.3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
